# training-polygon

./: .gitignore
attiny13_dev_board_programs/: Makefile  README  led_blink.c  led_blink_pwm.c  led_blink_switch_using_timer.c  led_switch_by_button.c  running_lights.c  two_led_adc_pwm.c  two_led_adc_pwm_with_button_interrupt.c  two_led_adc_pwm_with_state_swap.c  two_led_blink_pwm.c
attiny13_dev_board_programs/adc_pwm_led_button_example_programs/: README  led_blink.c  led_blink_pwm.c  led_blink_switch_using_timer.c  led_switch_by_button.c  running_lights.c  two_led_adc_pwm.c  two_led_adc_pwm_with_button_interrupt.c  two_led_adc_pwm_with_state_swap.c  (+1 more)
cpp_array_cache_performance_test/: Makefile  matrix.h  test_performance.cpp
cpp_primer/: Makefile_old
cpp_split_string/: CMakeLists.txt
cpp_split_string/include/: split_string.h
cpp_split_string/src/: CMakeLists.txt  split_string.cpp
cpp_split_string/test/: CMakeLists.txt  test_split_string.cpp
cpp_stepik_part1/: task1.cpp  task10.cpp  task10data  task13.cpp  task16.cpp  task17.cpp  task19.cpp  task20.cpp  task21.cpp  task22.cpp  task23.cpp  task24.cpp  task26.cpp  task28.cpp  task30.cpp  task33.cpp  task35.cpp  task4.cpp  task5.cpp  task8.cpp  task9.cpp  test1.c
csc_cpp_part_1/: task11.cpp  task12.cpp  task14.cpp  task15.cpp  task16_public.cpp  task18.cpp  task2.cpp  task25.cpp  task27.cpp  task27_second.cpp  task29.cpp  task3.cpp  task31.cpp  task32.cpp  task34.cpp  task36.cpp~  task37.cpp  task38.cpp  task4data  task6.cpp  task7.cpp  task8pointer.cpp  test2.cpp  test4.cpp  test5.cpp  test6.cpp
(+83 files in other folders)
